[tool.poetry]
name = "sam-assistant"
version = "0.1.0"
description = ""
authors = ["Fluttensor <mohammadhosine87@yahoo.com>"]
readme = "README.md"
packages = [{include = "sam_assistant"}]

[tool.poetry.scripts]
sam = "sam.main:app"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.147"
openai = "^0.27.4"
unstructured = "^0.6.1"
faiss-cpu = "^1.7.3"
fastapi = "^0.95.1"
llama-cpp-python = "^0.1.36"
asyncio = "^3.4.3"
sse-starlette = "^1.3.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
